# BGV_Modified

./: CMakeLists.txt  README.md  bgv_modified.cpp  bgv_modified.h  examples.h  main.cpp
modules/algorithm/: FFT.cpp  FFT.h  Huffman.cpp  Huffman.h
modules/bgv/: BGVBuilder.cpp  BGVBuilder.h  BGVSeal.cpp  BGVSeal.h
modules/random/: RandomGenerator.cpp  RandomGenerator.h
modules/simulator/: MatchingSimulator.cpp  MatchingSimulator.h
